--- a/inventory_project/templates/base.html
+++ b/inventory_project/templates/base.html
@@ -9,7 +9,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #CCFFFF;
+      background-image: linear-gradient(to right, red , blue);
     }
     .navbar {
       background-color: #343a40;
