--- a/inventory_project/templates/transaction.html
+++ b/inventory_project/templates/transaction.html
@@ -26,7 +26,7 @@
                 </tr>
               </thead>
               <tbody>
-                {% for transaction in transactions %}
+                {% for transaction in page_obj %}
                 <tr>
                   <td>{{ transaction.Name }}</td>
                   <td>
@@ -55,5 +55,4 @@
 
 <!-- Paginator -->
    {% include 'includes/paginator.html'%}
-
 {% endblock %}
