--- a/inventory_project/templates/includes/header.html
+++ b/inventory_project/templates/includes/header.html
@@ -8,8 +8,14 @@
 
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+       
+
           <li class="nav-item">
             <a class="nav-link" href="{% url "inventory_project:item_list"%}">Home</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="{% url "inventory_project:add_category"%}"> Add Category</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url "inventory_project:add_new_item"%}">Add Item</a>
@@ -19,6 +25,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url "inventory_project:transaction"%}"> Transaction</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="{% url "inventory_project:logout"%}"> Logout</a>
           </li>
         </ul>
       </div>
