--- a/inventory_project/templates/reset_password.html
+++ b/inventory_project/templates/reset_password.html
@@ -1,6 +1,34 @@
 {% extends "base.html"%}
 {% block content%}
   
+  {% if messages %}
+  <div aria-live="polite" aria-atomic="true" class="position-relative">
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      {% for message in messages %}
+        <div class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="d-flex">
+            <div class="toast-body">
+              {{ message }}
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+   <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      document.querySelectorAll('.toast').forEach(function(toastEl) {
+        new bootstrap.Toast(toastEl).show();
+      });
+      {% if redirect_to_login %}
+        setTimeout(function() {
+          window.location.href = "{% url 'inventory_project:login' %}";
+        }, 3000);
+      {% endif %}
+    });
+  </script>
+{% endif %}
 
 <section class="container py-5">
   <div class="row justify-content-center">
@@ -9,7 +37,7 @@
         <div class="card-body">
           <h4 class="card-title text-center mb-4">Reset Your Password</h4>
           
-          <form method="POST" action="">
+          <form method="POST" >
             {% csrf_token %}
             
             {% if form.errors %}
@@ -20,12 +48,12 @@
 
             <div class="mb-3">
               <label for="id_new_password1" class="form-label">New Password</label>
-              <input type="password" name="new_password1" class="form-control" id="id_new_password1" required>
+              <input type="password" name="new_password" class="form-control" id="id_new_password1" required>
             </div>
 
             <div class="mb-3">
               <label for="id_new_password2" class="form-label">Confirm New Password</label>
-              <input type="password" name="new_password2" class="form-control" id="id_new_password2" required>
+              <input type="password" name="confirm_password" class="form-control" id="id_new_password2" required>
             </div>
 
             <div class="d-grid">
