--- a/inventory_project/templates/reset_password_email.html
+++ b/inventory_project/templates/reset_password_email.html
@@ -6,7 +6,7 @@ You requested a reset password for your account at {{domain}}
 
 please click the link below to reset your password:
 
-<a href="http://{{domain}}/{% url 'app:reset_password' uidb64=uid token=token %}"> Click Here <a>
+http://{{domain}}{% url 'inventory_project:reset_password' uidb64=uid token=token %}
 
 thank you!
 {% endautoescape %}
