--- a/inventory_project/templates/add_reduce.html
+++ b/inventory_project/templates/add_reduce.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-
+<!-- header section-->
+{% include "includes/header.html" %}
 {% if messages %}
   <div aria-live="polite" aria-atomic="true" class="position-relative">
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
