--- a/inventory_project/templates/transaction.html
+++ b/inventory_project/templates/transaction.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-
+<!-- header section-->
+{% include "includes/header.html" %}
 <section class="container py-4">
   <div class="row justify-content-center">
     <div class="col-md-11 col-lg-10">
@@ -8,12 +9,14 @@
         <div class="card-header bg-gradient bg-primary text-white rounded-top-4">
           <div class="d-flex justify-content-between align-items-center">
             <h4 class="mb-0">Transaction List</h4>
+              <a href="{% url 'inventory_project:download' %}" class="btn btn-success">download</a>
           </div>
         </div>
 
         <div class="card-body p-0">
           <div class="table-responsive">
-            <table class="table table-striped table-hover align-middle mb-0 " style = "text-align:center">
+            
+              <table class="table table-striped table-hover align-middle " style = "text-align:center">
               <thead class="table-light" >
                 <tr>
                   
@@ -45,7 +48,7 @@
                 </tr>
                 {% endfor %}
               </tbody>
-            </table>
+            </table>   
           </div>
         </div>
       </div>
