--- a/inventory_project/templates/add_item.html
+++ b/inventory_project/templates/add_item.html
@@ -63,7 +63,7 @@
 
   if (!token) {
     alert("You must be logged in.");
-    window.location.href = "login";
+    window.location.href = "/login";
   }
 
   $(document).ready(function () {
