--- a/inventory_project/templates/dashboard.html
+++ b/inventory_project/templates/dashboard.html
@@ -3,7 +3,7 @@
 <!-- Header -->
 {% include "includes/header.html" %}
 
-<div class="container mt-5">
+<div class="container col-md-8 mt-5">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="mb-0" style="font-family: Georgia, serif;">Inventory Item List</h1>
   </div>
@@ -19,13 +19,14 @@
       <button id="search-btn" class="btn btn-primary">Search</button>
     </div>
   </div>
+</div>
 
   <!-- Items Table -->
+  <div class = "container col-md-7 ">
   <div class="table-responsive mt-4">
     <table class="table table-bordered table-hover align-middle text-center">
       <thead>
         <tr>
-          <th>Category</th>
           <th>Item Name</th>
           <th>Current Stock</th>
         </tr>
@@ -95,7 +96,6 @@
             items.forEach(function (item) {
               tableBody.append(`
                 <tr>
-                  <td>${item.category}</td>
                   <td>${item.name}</td>
                   <td>${item.current_stock}</td>
                 </tr>
